# kucharka

./: .flaskenv  .gitignore  .pre-commit-config.yaml  Pipfile  Procfile  README.md  SECURITY.md  config.py  cypress.json  env.example  env.testing  flaskenv.testing  kucharka.py  kucharka.todo  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  sourcery.yaml  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yml  codeql-analysis.yml  cypress-test.yml  cypress_test.yml  integration_test.yaml  lighthouse.yml  sourcery.yml  test.yaml
app/: __init__.py  cli.py
app/components/: __init__.py  action_badges.py  base.py  buttons.py  day_cards.py  dropzone.py  icons.py  images.py  links.py  tables.py
app/controllers/: __init__.py  admin.py  admin_statistics.py  attendance.py  attendees.py  base_recipes.py  conversions.py  daily_plan_exporter.py  daily_plan_recipes.py  daily_plan_tasks.py  daily_plans.py  daily_plans_edit.py  dashboard.py  edit_events.py  edit_recipe_ingredients.py  edit_recipes.py  errors.py  event_exporter.py  event_portion_types.py  events.py  fast_add_ingredients.py  files.py  index.py  ingredient_categories.py  ingredients.py  measurements.py  portion_types.py  public_ingredients.py  public_recipes.py  recipe_categories.py  recipe_photos.py  recipe_tasks.py  recipes.py  support.py  tips.py  user_calendars.py  user_statistics.py  users.py
app/data/: template_data.py  texts.py
app/forms/: __init__.py  attendees.py  daily_plan_tasks.py  events.py  ingredients.py  portion_types.py  public_recipes.py  recipe_ingredients.py  recipe_tasks.py  recipes.py  users.py
app/handlers/: data.py
app/helpers/: admin_view_mixin.py  auth.py  base_mixin.py  context_processors.py  extended_flask_view.py  form.py  form_select_field.py  formaters.py  general.py  helper_flask_view.py  item_mixin.py  skautis.py  turbo.py  turbo_flash.py
app/models/: __init__.py  attendees.py  attendees_have_labels.py  conversions.py  daily_plan_tasks.py  daily_plans.py  daily_plans_have_recipes.py  event_days.py  event_portion_types.py  events.py  files.py  ingredient_categories.py  ingredients.py  ingredients_have_labels.py  item_mixin.py  label_categories.py  labels.py  measurements.py  measurements_to_measurements.py  oauth.py  portion_types.py  recipe_categories.py  recipe_tasks.py  recipes.py  recipes_have_ingredients.py  recipes_have_labels.py  request_logs.py  roles.py  shopping.py  tips.py  users.py  users_have_event_roles.py  users_have_recipes_reaction.py  users_have_roles.py
app/presenters/: __init__.py  base.py  daily_plans.py  events.py  ingredients.py  items.py  recipe_tasks.py  recipes.py
app/services/: __init__.py  role_manager.py
app/static/: changelog.md  cypress.json  esbuild.config.js  manifest.webmanifest  package-lock.json  package.json
cypress/: cypress.json  package-lock.json  package.json
github/workflows/: .sourcery.yaml
migrations/: alembic.ini
migrations/versions/: 202104202310_default_schema.py  202104251758_add_ingredient_categories.py  20210502_add_recipe_categories.py  20210502_add_recipe_category_to_recipe.py  20210510_add_event_cols.py  20210510_add_events.py  20210510_add_fk.py  (+64 more)
tests/: __init__.py  conftest.py  data_helpers.py  helpers.py
(+373 files in other folders)
