[tool.flake8]
exclude = "migrations"
ignore = ["D203","E501","W503","C901"]
max_line_length = 88
max-complexity = 10

[tool.black]
exclude = "migrations"

[tool.bandit]
exclude_dirs = ["tests", "migrations"]

[tool.pytest]
base_url = "http://localhost:5001"
addopts = "--live-server-port=5001"

[tool.pytest.ini_options]
base_url = "http://localhost:5001"
addopts = "--live-server-port=5001"
markers = [
  "integration: slow, integration tests (deselect with '-m \"not integration\"')",
  ]
[tool.poetry]
name = "kucharka"
version = "0.9.0"
description = ""
authors = ["Jan Peterka <jan.peterka@hey.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

email-validator = "*"
flask-classful = { git = "https://github.com/janpeterka/flask-classful.git", branch = "werkzeug-2.2" }
flask-dance = "*"
flask-mail = "^0.9.1"
flask-migrate = "^4.0.4"
flask-security-too = "^5.2.0"
flask-weasyprint = "*"
gevent = "^22.10.2"
gunicorn = "^20.1.0"
icalendar =  "^5.0.7"
pymysql = "^1.0.3"
python-dotenv = "^1.0.0"
sentry-sdk = {extras = ["sqlalchemy"], version = "^1.25.1"}
turbo-flask = "^0.8.4"
unidecode = "^1.3.6"
weasyprint = "^57.2"
wtforms-sqlalchemy = "^0.3"
cryptography = "^41.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
coverage = "^7.2.7"
factory-boy = "^3.2.1"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.3"
mypy = "*"
pytest-flask = "^1.2.0"
pytest-playwright = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
