[tool.flake8]
exclude = "migrations"
ignore = ["D203","E501","W503","C901"]
max_line_length = 88
max-complexity = 10

[tool.black]
exclude = "migrations"

[tool.bandit]
exclude_dirs = ["tests", "migrations"]

[tool.pytest]
base_url = "http://localhost:5001"
addopts = "--live-server-port=5001"

[tool.pytest.ini_options]
base_url = "http://localhost:5001"
addopts = "--live-server-port=5001"
markers = [
  "integration: slow, integration tests (deselect with '-m \"not integration\"')",
  ]

[tool.poetry]
name = "kucharka"
version = "0.9.0"
description = ""
authors = ["Jan Peterka <jan.peterka@hey.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple/"
secondary = true

[tool.poetry.dependencies]
python = "^3.9"

email-validator = "*"
flask-classful = { git = "https://github.com/janpeterka/flask-classful.git", branch = "werkzeug-2.2" }
flask-dance = "*"
flask-mail = "^0.9.1"
flask-migrate = "^4.0.5"
flask-security-too = "^5.3.3"
flask-weasyprint = "*"
gevent = "^23.9.0"
gunicorn = "^21.2.0"
icalendar =  "^5.0.10"
pymysql = "^1.1.0"
python-dotenv = "^1.0.0"
sentry-sdk = {extras = ["sqlalchemy"], version = "^1.32.0"}
turbo-flask = "^0.8.4"
unidecode = "^1.3.6"
weasyprint = "^57.2"
wtforms-sqlalchemy = "^0.3"
cryptography = "^41.0.7"
flask-template-components = "^0.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
coverage = "^7.3.2"
factory-boy = "^3.3.0"
flake8 = "^6.1.0"
flake8-pyproject = "^1.2.3"
mypy = "*"
pytest-flask = "^1.2.0"
pytest-playwright = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
